# ComplianceNLP

./: Dockerfile.serving  README.md  pyproject.toml  requirements-dev.txt  requirements-serving.txt  requirements.txt  setup.py
configs/: distillation.yaml  extraction.yaml  gap_analysis.yaml  medusa.yaml  serving.yaml
docs/: COMPUTE_RESOURCES.md
examples/: sample_output.json  sample_regulation.txt
kubernetes/: deployment.yaml
scripts/: build_knowledge_graph.py  evaluate.py  train_extraction.py  train_gap_analysis.py  train_medusa.py
src/compliance_nlp/: __init__.py
src/compliance_nlp/data/: __init__.py  datasets.py  preprocessing.py
src/compliance_nlp/evaluation/: __init__.py  latency_benchmark.py  metrics.py
src/compliance_nlp/extraction/: __init__.py  crossref.py  deontic.py  multitask.py  ner.py
src/compliance_nlp/gap_analysis/: __init__.py  alignment.py  grounding.py  report.py  severity.py
src/compliance_nlp/knowledge_graph/: __init__.py  builder.py  query.py  schema.py
src/compliance_nlp/models/: __init__.py  gap_generator.py  legal_bert.py
src/compliance_nlp/optimization/: __init__.py  distillation.py  medusa_heads.py
src/compliance_nlp/retrieval/: __init__.py  hybrid.py
src/compliance_nlp/serving/: __init__.py  server.py
src/compliance_nlp/utils/: __init__.py  config.py  reproducibility.py
tests/: test_extraction.py  test_gap_analysis.py  test_knowledge_graph.py  test_retrieval.py
